--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "presurgical_report",
 	"label": "Presurgical Report Generator",
-	"description": "Generates a report from an fmri scan of an 				epilepsy patient",
+	"description": "Generates a report from an fmri scan of an epilepsy patient",
 	"author": "Will Tackett",
 	"maintainer": "Will Tackett <william.tackett@pennmedicine.upenn.edu>",
 	"source": "none",
@@ -9,13 +9,13 @@
 	"version": "3.1.1",
 	"license": "BSD-3-Clause",
 	"inputs": {
-		"fmriprepDir": {
-			"description": "Full path to directory containing 				 fmriprep results",
-			"base": "file",
+		"fmriprep_dir": {
+			"description": "Full path to directory containing fmriprep results",
+			"base": "file"
 		},
-	"config": {},
-	"command": "./report.py",
-	"author": "Will Tackett",
-	"maintainer": "Will Tackett"		
+		"config": {},
+		"command": "./report.py",
+		"author": "Will Tackett",
+		"maintainer": "Will Tackett"
 	}
 }
