updated image version in manifest

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
 	"custom": {
 		"gear-builder": {
 			"category": "analysis",
-			"image": "willtack/report:0.0.3"
+			"image": "willtack/presurgical-report:0.0.3"
 		},
 		"flywheel": {
 			"suite": "BrainScienceCenter"
