--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"name": "presurg",
 	"label": "linguaMap: generate a report analyzing language task fMRI data",
 	"description": "linguaMap is a gear for analyzing language tasks, particularly in the context of presurgical lateralization. It takes the results of fMRIPrep as input and compiles activation maps and ROI statistics into an html report. It was originally designed for epilepsy patients who receive an fMRI to lateralize language function prior to surgery.",
-	"version": "1.6.1_0.6.1",
+	"version": "1.6.6_0.6.6",
 	"inputs": {
 		"api_key": {
 			"base": "api-key"
@@ -24,35 +24,22 @@
 			"type": "number"
 		},
 		"cluster_size_thresh": {
-			"default": "150",
+			"default": 150,
 			"description": "Cluster extent threshold",
 			"type": "integer"
 		},
 		"fwhm": {
-			"default": "6",
+			"default": 6,
 			"description": "Size of smoothing kernel",
 			"type": "integer"
-		},
-		"light_output": {
-			"default": false,
-			"description": "Don't save the large report_results folder. Only the PDF and the stats CSV will be outputted.",
-			"type": "boolean"
 		}
 	},
-	"environment": {
-		"FLYWHEEL": "/flywheel/v0",
-		"FSLDIR": "/usr/share/fsl",
-		"FSLMULTIFILEQUIT": "TRUE",
-		"FSLOUTPUTTYPE": "NIFTI_GZ",
-		"LANG": "C.UTF-8",
-		"LC_ALL": "C.UTF-8",
-		"LD_LIBRARY_PATH": "/usr/share/fsl/6.0/lib",
-		"PATH": "/usr/local/miniconda/bin:/usr/share/fsl/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
-		"PYTHONNOUSERSITE": "1",
-		"PYTHON_PIP_VERSION": "19.2.2",
-		"PYTHON_VERSION": "3.7.4"
-	},
 	"command": "/flywheel/v0/run.sh",
+	"environment": {
+			"PYTHONNOUSERSITE": "1",
+			"PYTHON_PIP_VERSION": "20.0.2",
+			"PYTHON_VERSION": "3.7.1"
+		},
 	"author": "William Tackett",
 	"maintainer": "William Tackett",
 	"license": "BSD-3-Clause",
@@ -61,7 +48,7 @@
 	"custom": {
 		"gear-builder": {
 			"category": "analysis",
-			"image": "willtack/lingua-map:0.6.1"
+			"image": "willtack/lingua-map:0.6.6"
 		},
 		"flywheel": {
 			"suite": "BrainScienceCenter"
