--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"name": "presurg",
 	"label": "linguaMap: generate a report analyzing language task fMRI data",
 	"description": "linguaMap is a gear for analyzing language tasks, particularly in the context of presurgical lateralization. It takes the results of fMRIPrep as input and compiles activation maps and ROI statistics into an html report. It was originally designed for epilepsy patients who receive an fMRI to lateralize language function prior to surgery.",
-	"version": "1.6.6_0.6.6",
+	"version": "1.7.2b_0.7.2",
 	"inputs": {
 		"api_key": {
 			"base": "api-key"
@@ -36,10 +36,15 @@
 	},
 	"command": "/flywheel/v0/run.sh",
 	"environment": {
-			"PYTHONNOUSERSITE": "1",
-			"PYTHON_PIP_VERSION": "20.0.2",
-			"PYTHON_VERSION": "3.7.1"
-		},
+		"FLYWHEEL": "/flywheel/v0",
+		"FSLDIR": "/usr/share/fsl",
+		"FSLMULTIFILEQUIT": "TRUE",
+		"FSLOUTPUTTYPE": "NIFTI_GZ",
+		"PYTHONNOUSERSITE": "1",
+		"PYTHON_PIP_VERSION": "20.0.2",
+		"PYTHON_VERSION": "3.7.1",
+		"PATH": "/usr/lib/afni/bin:/usr/share/fsl/5.0/bin:/usr/local/miniconda/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+	},
 	"author": "William Tackett",
 	"maintainer": "William Tackett",
 	"license": "BSD-3-Clause",
@@ -48,7 +53,7 @@
 	"custom": {
 		"gear-builder": {
 			"category": "analysis",
-			"image": "willtack/lingua-map:0.6.6"
+			"image": "willtack/lingua-map:0.7.2"
 		},
 		"flywheel": {
 			"suite": "BrainScienceCenter"
