--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-	"name": "presurg",
-	"label": "linguaMap: generate a report analyzing language task fMRI data",
-	"description": "linguaMap is a gear for analyzing language tasks, particularly in the context of presurgical lateralization. It takes the results of fMRIPrep as input and compiles activation maps and ROI statistics into an html report. It was originally designed for epilepsy patients who receive an fMRI to lateralize language function prior to surgery.",
-	"version": "1.9.0_0.10.0",
+	"name": "motorfmri",
+	"label": "motor fMRI",
+	"description": "For the analysis of motor imagery fMRI tasks",
+	"version": "0.0.4_0.0.1",
 	"inputs": {
 		"api_key": {
 			"base": "api-key"
@@ -38,12 +38,13 @@
 	"author": "William Tackett",
 	"maintainer": "William Tackett",
 	"license": "BSD-3-Clause",
-	"source": "https://github.com/willtack/lingua-map",
+	"source": "https://github.com/willtack/motor-fmri",
 	"url": "",
+	"environment": {"REQUESTS_CA_BUNDLE":"/etc/ssl/certs/ca-certificates.crt"},
 	"custom": {
 		"gear-builder": {
 			"category": "analysis",
-			"image": "willtack/lingua-map:0.10.0"
+			"image": "willtack/motorfmri:0.0.1"
 		},
 		"flywheel": {
 			"suite": "BrainScienceCenter"
